--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2021"
 [dependencies]
 aochelpers = "0.4.0"
 color-eyre = "0.6.2"
+crypto = "0.5.1"
+indoc = "2.0.4"
 num = "0.4.1"
 regex = "1.10.2"
